<resources>
    <string name="app_name">ChatApp</string>
    <string name="email_text">Email</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="logo_image_text">LogoImage</string>
    <string name="send_message_hint">input message&#8230;</string>
    <string name="password_text">Password</string>
    <string name="username_text">Username</string>
    <string name="default_a_new_friend_request">A new friend request</string>
    <string name="accept_text">accept</string>
    <string name="deny_text">deny</string>
</resources>
