<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar_friend_request"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/chat"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/friend_request_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/accept_request_btn"
        app:layout_constraintStart_toEndOf="@id/avatar_friend_request"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="沙雕网友" />

    <TextView
        android:id="@+id/request_message_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/default_a_new_friend_request"
        app:layout_constraintTop_toBottomOf="@id/friend_request_name_text"
        app:layout_constraintStart_toEndOf="@id/avatar_friend_request"
        app:layout_constraintEnd_toStartOf="@id/deny_request_btn"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/accept_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/accept_text"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/deny_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deny_text"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/accept_request_btn"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>